--- a/src/components/AnimeSearch/index.css
+++ b/src/components/AnimeSearch/index.css
@@ -1,3 +1,4 @@
+
 .card-img {
     max-height: 350px;
 }
@@ -9,4 +10,9 @@ a:link {
 
 a:link {
     text-decoration: none;
+}
+
+
+.pushtop {
+    margin-top: -320px;
 }
